# angle

./: .gn  BUILD.gn
build_overrides/: angle.gni  clspv.gni  clvk.gni  llvm.gni
gni/: angle.gni
scripts/: generate_android_bp.py  roll_aosp.sh
src/libANGLE/renderer/vulkan/: BUILD.gn
